<resources>
    <string name="app_name">BITA</string>

    <string name="profile_placeholder" translatable="false">https://raw.githubusercontent.com/roian6/NanumFest2020/master/app/src/main/res/drawable/profile_placeholder.jpg</string>

    <string name="splash_phrase">2020 나눔축제 채팅 앱 만들기 클래스</string>
    <string name="splash_copyright" translatable="false">© 2020. EDCAN. all rights reserved.</string>

    <string name="on_board_1_title">언택트 시대,</string>
    <string name="on_board_1_sub">채팅으로 소통하세요</string>
    <string name="on_board_1_text">선린인터넷고등학교 나눔축제와 함께,
        \n실시간으로 소통할 수 있는 채팅 앱을 만들어봐요!</string>

    <string name="on_board_2_title">첫번째 단계</string>
    <string name="on_board_2_sub">로그인 &amp; 회원가입</string>
    <string name="on_board_2_text">Firebase Authentication을 사용하여
        \n온라인 로그인 및 회원가입 기능을 제작해 봅니다.</string>

    <string name="on_board_3_title">두번째 단계</string>
    <string name="on_board_3_sub">실시간 채팅하기</string>
    <string name="on_board_3_text">Cloud Firestore와 Storage를 사용하여
        \n실시간 단체 채팅 기능을 제작해 봅니다.</string>

    <string name="on_board_4_title">그럼 이제,</string>
    <string name="on_board_4_sub">시작해 볼까요?</string>
    <string name="on_board_4_text">2020 나눔축제 ✕ EDCAN과 함께하는
        \n나만의 채팅 앱 만들기 클래스, 지금 시작합니다!</string>

    <string name="on_board_skip">건너뛰기</string>
    <string name="on_board_start">시작하기</string>

    <string name="error_empty_field">빈칸을 모두 채워주세요.</string>
    <string name="error_password_invalid">비밀번호가 올바르지 않습니다.</string>
    <string name="error_no_user_data">유저 데이터가 존재하지 않습니다.</string>
    <string name="error_user_data_upload_failed">유저 데이터 업로드에 실패했습니다.</string>
    <string name="error_user_create_failed">유저 회원가입에 실패했습니다.</string>
    <string name="error_no_user_account">존재하지 않는 계정입니다.</string>
    <string name="error_user_account_taken">이미 사용중인 이메일입니다.</string>
    <string name="error_email_invalid">올바른 이메일 주소를 입력해 주세요.</string>
    <string name="error_password_invalid_case">올바른 형식의 비밀번호를 입력해 주세요. (6~24자, 알파벳 대소문자+숫자)</string>
    <string name="error_password_different">비밀번호 확인이 일치하지 않습니다.</string>
    <string name="error_no_internet">인터넷 연결을 확인해 주세요.</string>
    <string name="error_image_invalid_type">올바른 형식의 이미지를 업로드 해주세요. (jpeg, png)</string>
    <string name="error_profile_logged_out">유저 정보를 불러올 수 없습니다. 프로필 설정을 스킵해주세요.</string>
    <string name="error_user_info_update_failed">유저 정보를 업데이트하는 데 실패했습니다.</string>
    <string name="error_image_upload_failed">이미지 업로드에 실패했습니다.</string>
    <string name="error_image_url_failed">이미지 주소를 가져오는 데 실패했습니다.</string>
    <string name="error_send_chat_failed">메시지 전송에 실패했습니다.</string>
    <string name="error_observe_chat_failed">메시지 수신에 실패했습니다.</string>

    <string name="login_title">만나서 반가워요!</string>
    <string name="login_text">내 프로필로 로그인하고, 채팅을 시작해 보세요.</string>
    <string name="login_email">이메일</string>
    <string name="login_pw">비밀번호</string>
    <string name="login_login">로그인</string>
    <string name="login_text_register">아직 계정이 없나요? 회원가입을 진행해 주세요!</string>
    <string name="login_register">회원가입</string>
    <string name="login_forgot_pw">비밀번호를 잊어버렸나요?</string>
    <string name="login_loading">로그인 중…</string>
    <string name="login_success">로그인 성공!</string>

    <string name="register_skip">건너뛰기</string>
    <string name="register_next">다음</string>
    <string name="register_text_name_email">이름과 이메일을 \n입력해주세요</string>
    <string name="register_name">이름</string>
    <string name="register_email">이메일</string>
    <string name="register_text_pw">비밀번호를 \n입력해주세요</string>
    <string name="register_pw">비밀번호</string>
    <string name="register_pw_confirm">비밀번호 확인</string>
    <string name="register_text_profile_introduce">프로필 사진과 한줄 소개, \n성격 유형을 등록해주세요</string>
    <string name="register_introduce">한줄 소개 (20자 이내)</string>
    <string name="register_finish">완료</string>
    <string name="register_email_check">이메일 중복 확인중…</string>
    <string name="register_email_check_success">확인 성공!</string>
    <string name="register_signing">회원가입 진행중…</string>
    <string name="register_success">회원가입 성공!</string>
    <string name="register_skip_profile">프로필 설정을 건너뛸까요?</string>
    <string name="register_cancel">취소</string>
    <string name="register_pw_rule">(6~24자, 영문+숫자)</string>
    <string name="register_profile_uploading">프로필 업로드 중…</string>
    <string name="register_profile_upload_success">업로드 성공!</string>
    <string name="main_1_chat">채팅</string>
    <string name="main_1_title">채팅 시작하기</string>
    <string name="main_1_description">채팅방에 입장하고, \n다른 사용자들과 채팅을 시작해 보세요!</string>
    <string name="main_1_private">성격유형 채팅방</string>
    <string name="main_1_public">전체 채팅방</string>
    <string name="main_2_profile">프로필</string>
    <string name="main_2_edit_profile">프로필 수정하기</string>
    <string name="main_3_class_name">SSF 2020 채팅 앱 만들기 클래스</string>
    <string name="main_3_dev_info">개발자 정보</string>
    <string name="main_3_club_info">동아리 소개</string>
    <string name="main_3_license">오픈소스 라이선스</string>
    <string name="main_3_logout">로그아웃</string>
    <string name="main_3_more">더보기</string>
    <string name="menu_main_chat">채팅</string>
    <string name="menu_main_profile">프로필</string>
    <string name="menu_main_more">더보기</string>
    <string name="chat_message_hint" translatable="false">Aa</string>
    <string name="chat_title">채팅</string>

    <string name="url_dev_info" translatable="false">https://github.com/roian6</string>
    <string name="url_edcan" translatable="false">https://edcan.kr</string>
    <string name="url_github" translatable="false">https://github.com/roian6/nanumfest2020</string>

    <string name="edit_profile_complete">프로필 수정 완료!</string>
    <string name="edit_profile_title">프로필 수정</string>
    <string name="edit_profile_save">저장하기</string>

    <string name="reset_pw_success">성공적으로 전송했습니다!</string>
    <string name="reset_pw_send">재설정 메일 전송하기</string>
    <string name="reset_pw_description">회원가입시 사용한\n이메일을 입력해 주세요</string>
    <string name="reset_pw_title">비밀번호 재설정</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="register_personality">성격 유형</string>
    <string name="personality_finish">검사 완료하기</string>
    <string name="personality_test">성격유형 검사</string>

</resources>