<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="clickHandler"
            type="com.david0926.scon.screen.login.LoginActivity.LoginActivityClickHandler" />

        <variable
            name="viewModel"
            type="com.david0926.scon.screen.login.LoginActivityViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColorPrimary"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="48dp"
                android:src="@drawable/undraw_taking_selfie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/notosanskr_bold"
                android:text="@string/login_title"
                android:textSize="32sp"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosanskr_regular"
                android:text="@string/login_text"
                android:textSize="16sp"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="28dp"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:text="@={viewModel.email}"
                android:textSize="16sp"
                app:bindTextWatcher="@{viewModel.textWatcher}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="12dp"
                android:hint="@string/login_pw"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="@={viewModel.pw}"
                android:textSize="16sp"
                app:bindTextWatcher="@{viewModel.textWatcher}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:onClick="@{()->clickHandler.btnResetPwClick()}"
                android:padding="4dp"
                android:text="@string/login_forgot_pw"
                android:textColor="@color/materialGray6"
                android:textSize="12sp"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="@+id/editText2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/editText2"
                app:layout_constraintTop_toBottomOf="@+id/editText2" />

            <Button
                android:id="@+id/button"
                style="@style/ButtonStyleColored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="12dp"
                android:onClick="@{() -> clickHandler.btnLoginClick()}"
                android:padding="4dp"
                android:text="@string/login_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/notosanskr_bold"
                android:textColor="@color/materialRed"
                android:textSize="14sp"
                android:visibility="invisible"
                app:bindErrorMsg="@{viewModel.errorMsg}"
                app:bindInvisibility="@{viewModel.errorMsg.length() &gt; 0}"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toTopOf="@id/txt_login_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <TextView
                android:id="@+id/txt_login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="113dp"
                android:layout_marginBottom="8dp"
                android:text="@string/login_text_register"
                android:textColor="@color/materialGray6"
                android:textSize="14sp"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toTopOf="@+id/button2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <Button
                android:id="@+id/button2"
                style="@style/ButtonStyleBorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="24dp"
                android:onClick="@{() -> clickHandler.btnRegisterClick()}"
                android:padding="4dp"
                android:text="@string/login_register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</layout>